# herz

./: .behaverc  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENCE  README.md  justfile  package.json  pyproject.toml  requirements.txt
.github/workflows/: automatic.yaml  basic.yaml  manual.yaml
docs/models/apis/: README.md
docs/models/apis/Models/: Credentials.md  MetaData.md
docs/models/app/: README.md
docs/models/app/Models/: AppConfig.md  AppConfigSettings.md  AppConfigSettingsTrigonometric.md  EnumBoundKind.md  EnumModelKind.md  EnumSolver.md  EnumSpecialPointPVKind.md  FitExpCondition.md  FitExpConfig.md  FitExpConfigSolver.md  FitExpIntialisation.md  FitTrigCondition.md  FitTrigConfig.md  FitTrigConfigSolver.md  FitTrigIntialisation.md  InterpConfig.md  InterpConfigPoly.md  InterpConfigPolynomial.md  InterpConfigTrig.md  InterpConfigTrigSolver.md  InterpConfigTrigonometric.md  MarkerSettings.md  MatchingConfig.md  PointFormat.md  PointPV.md  PolyCritCondition.md  PolyIntCondition.md  RepoInfo.md  SpecialPointsConfig.md  SpecialPointsConfigPV.md  TimeInterval.md
docs/models/fitting/: README.md
docs/models/fitting/Models/: EnumSign.md  FittedInfoExp.md  FittedInfoPoly.md  FittedInfoTrig.md
docs/models/user/: README.md
docs/models/user/Models/: DataTimeSeries.md  DataTypeColumn.md  DataTypeQuantity.md  EnumEndpoint.md  EnumFeature.md  EnumProgrammeMode.md  RequestConfig.md  RequestsConfig.md  UserData.md  UserOutput.md  UserProcess.md
documentation/: README.md
documentation/models/app/: README.md
documentation/models/app/Models/: AppConfig.md  AppConfigSettings.md  AppInfo.md  AppUnits.md  EnumCriticalPoints.md  MarkerConfig.md  MarkerSettings.md  PolyDerCondition.md  PolyIntCondition.md  PolynomialCondition.md  PolynomialConfig.md  PolynomialSetting.md  SpecialPointsConfig.md  SpecialPointsConfigs.md  SpecialPointsSpec.md
documentation/models/internal/: README.md
documentation/models/internal/Models/: EnumExtremePoints.md  FittedInfo.md  FittedInfoNormalisation.md
documentation/models/user/: README.md
documentation/models/user/Models/: DataTimeSeriesCommon.md  EnumFittingMode.md  EnumLogLevel.md  EnumType.md  UserBasicOptions.md  UserCase.md  UserConfig.md  (+4 more)
examples/: README.md
examples/data/: pressure.csv  volume.csv
examples/setup/: config.yaml
models/: schema-apis.yaml  schema-app.yaml  schema-fitting.yaml  schema-user.yaml
notebooks/: main.ipynb  sandbox.ipynb
scripts/: package.py
src/: __paths__.py  api.py  cli.py  main.py  paths.py
src/algorithms/: __init__.py  bad_points.py  cycles.py  fit.py  onb.py  peaks.py  points.py  special.py
src/algorithms/anomalies/: __init__.py  cycles.py  peaks.py  points_bad.py
src/algorithms/critical/: __init__.py  clean.py  logging.py  points_critical.py  points_special.py
src/algorithms/fitting/: __init__.py
src/algorithms/graph/: __init__.py  ranks.py
src/algorithms/interpolations/: __init__.py  geometry.py  linear.py  normalisation.py  statistics.py
src/algorithms/jordan/: __init__.py  decompose.py  polynomials.py
src/core/: constants.py  crit.py  epsilon.py  graph.py  log.py  poly.py  signal.py  utils.py
src/core/log/: __init__.py  basic.py  decorators.py  progress.py
src/core/timing/: __init__.py  countdown.py  decorators.py
src/endpoints/: __init__.py  run.py
src/endpoints/right_ventricle/: endpoint.py
src/features/: __init__.py  run.py
src/features/right_ventricle/: __init__.py  endpoint.py
src/guards/: files.py  http.py
src/models/: common.yaml  schema-app.yaml  schema-internal.yaml  schema-user.yaml
src/models/apis/: __init__.py  basic.py
src/models/app/: __init__.py  poly.py
src/models/critical/: __init__.py  basic.py
src/models/enums/: __init__.py
src/models/epsilon/: __init__.py  basic.py  basic_matrix.py  basic_vector.py  clean.py  duplicates.py  search.py
src/models/filesmanager/: __init__.py  os.py  traits.py
src/models/fitting/: __init__.py  conditions.py  points.py
src/models/internal/: __init__.py  classes.py  conditions.py  info.py  points.py  poly.py
src/models/intervals/: __init__.py  cycles.py  merge.py  resolve.py
src/models/poly/: __init__.py  poly.py  rational.py
src/models/polynomials/: __init__.py  euklidean.py  fourier.py  geometry.py  integrals.py  models_base.py  models_exp.py  models_poly.py  models_polyexp.py  models_polytrig.py  models_trig.py
src/models/scientific/: __init__.py
src/models/user/: __init__.py  files.py
src/queries/console/: api.py  basic.py  cli.py
src/queries/environment/: __init__.py  basic.py  http.py
src/queries/fitting/: __init__.py  alignment.py  normalisation.py  series.py
src/queries/scientific/: __init__.py  conversion.py
src/setup/: __init__.py  config.py  config.yaml  conversion.py  plots.py  register.py  series.py
src/steps/: __init__.py  methods.py  step_align_cycles.py  step_combine_data.py  step_fit_curve.py  step_output_plots.py  step_output_tables.py  step_process_data.py  step_read_data.py  step_recognise_cycles.py  step_recognise_peaks.py  step_recognise_points.py  step_shift_data.py  step_special_points.py
src/ui/: __init__.py  basic.py
src/ui/endpoints/: __init__.py  common.py  decorators.py  ep_basic.py  ep_features.py  ep_run.py
templates/: template-config.yaml  template-requests.yaml  template.env
tests/: paths.py
tests/behave/: __paths__.py  environment.py
tests/behave/core/: decorators.py  log.py
tests/behave/features/: hello.feature
tests/behave/steps/: debug.py  hello.py
tests/tests_algorithms/: tests_cycles.py  tests_onb.py  tests_peaks.py
tests/tests_core/: tests_crit.py  tests_graph.py  tests_log.py  tests_poly.py  tests_signal.py  tests_utils.py
tests/tests_models/tests_app/: conftest.py  tests_poly.py
tests/tests_models/tests_internal/: tests_poly.py
tests/unit/: __paths__.py  conftest.py
tests/unit/tests_algorithms/: tests_cycles.py  tests_onb.py  tests_peaks.py
tests/unit/tests_core/: tests_crit.py  tests_graph.py  tests_log.py  tests_poly.py  tests_signal.py  tests_utils.py
(+92 files in other folders)
