[project]
name = 'herz'
version = '0.1.0'
description = 'Computations for Pressure-Volume data series'
authors = [
    { name = 'raj-open', email='raj-open@users.noreply.github.com' },
]
maintainers = [
    { name = 'raj-open', email='raj-open@users.noreply.github.com' },
]
license = { file = 'LICENCE' }
readme = 'README.md'
requires-python = '>=3.10'
keywords = [
    'python',
]
# cf. https://pypi.org/classifiers
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
# NOTE do not use == in pyproject.toml only in requirements.txt
[project.dependencies]
pip = {version='^23.2.1'}
wheel = {version='^0.41.0'}
setuptools = {version='^68.0.0'}
# code
pathlib = {version='^1.0.1'}
pathspec = {version='^0.11.1'}
typing = {version='^3.7.4.3'}
codetiming = {version='^1.4.0'}
asyncio = {version='^3.4.3'}
anyio = {version='^3.7.1'}
# config
toml = {version='^0.10.2'}
python-dotenv = {version='^1.0.0'}
jsonschema = {version='^4.18.4'}
lazy-load = {version='^0.8.3'}
pyyaml = {version='^6.0.1'}
# models
dataclasses = {version='^0.6'}
pydantic = {version='1.10.12'} # not latest otherwise has issues with datamodel-code-generator
pydantic-extra-types = {version='0.0.1'}
# maths + data
numpy = {version='^1.24.3'}
pandas = {version='^2.0.3'}
scipy = {version='^0.0.0'}
pint = {version='^0.22'}
findpeaks = {version='^2.5.2'}
lmfit = {version='^1.2.2'}
# rendering
tabulate = {version='^0.9.0'}
matplotlib = {version='^3.7.2'}
imageio = {version='^2.31.1'}
# notebooks
ipython = {version='8.15.0'} # NOTE: ^8.16.0 has issues!
jupyter = {version='^1.0.0'}
jupyterthemes = {version='^0.20.0'}
widgetsnbextension = {version='^4.0.9'}
ipywidgets = {version='^8.1.1'}
nbconvert = {extras=['webpdf', 'qtpdf'], version='^7.2.3'}
# miscellaneous
datetime = {version='^5.2'}
pendulum = {version='^2.1.2'}
lorem = {version='^0.1.1'}

[project.optional-dependencies.test]
coverage = {extras=['toml'], version='^7.2.7'}
pytest-cov = {version='^4.1.0'}
pytest-lazy-fixture = {version='^0.6.3'}
pytest-order = {version='^1.1.0'}
pytest = {version='^7.4.0'}
testfixtures = {version='^7.1.0'}

[project.optional-dependencies.dev]
# NOTE: depends on name of project!
herz = {extras=['test']}
# models
datamodel-code-generator = {version='^0.21.2'}
openapi-generator-cli = {version='^4.3.1'}
openapi-generator = {version='^1.0.6'}
# hooks and linting
pre_commit = {version='^3.4.0'}
black = {extras=['d', 'jupyter'], version='^23.7.0'}
# decorations
pybadges = {version='^3.0.0'}

[project.urls]
homepage = 'https://github.com/raj-open/herz'

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
herz = [
    'models/*.yaml',
]

[tool.setuptools.packages.find]
where = [ 'src' ]
include = [ 'herz*' ]
namespaces = true

[tool.black]
line-length = 96
skip-string-normalization = true # prevents ' -> " conversion
target-version = [ 'py311' ]
# include = '^.*\.py$' # NOTE: this does nothing!
# extend-ignore = [ 'E501', 'E703' ] # NOTE: this does not work!

[tool.pytest.ini_options]
minversion = "7.4.0"
testpaths = [
    "tests",
]
python_files = [
    "**/tests_*.py", # <- pattern for file names to be tested
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
# NOTE: appends (not prepends) flags:
addopts = [
    "--order-dependencies",
    "--order-group-scope=module",
    "--cache-clear",
    "--verbose",
    "--maxfail=1",
    "-k test_", # <- pattern for methods to count as tests
    "-k tests_", # <- pattern for methods to count as tests
    # NOTE: will be ignored, if --cov not used (e.g. integration tests):
    "--no-cov-on-fail",
    "--cov-report=term",
    "--cov-config=.coveragerc",
    # NOTE: for development purposes only:
    # "-s", # verbose print/err capturing disabled
    "--capture=tee-sys", # verbose print/err capturing enabled
]
